# org-release-template

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release-please-config.json
.github/workflows/: ci.yml  pr-check.yml  release-please.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_TEMPLATE.md  BRANCH_PROTECTION.md  CONVENTIONAL_COMMITS.md  ORGANIZATION_REQUIREMENTS.md  RELEASE_WORKFLOW.md
src/: index.js  utils.py
tests/: test_utils.py
