[project]
name = "org-release-template"
version = "1.1.0"
description = "Reference repository for Organization projects"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Organization", email = "org@example.com"}
]
keywords = ["template", "reference", "requirements", "sedia", "khaos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
# Dependencies for development (optional)
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
